tests/ui/coercion/fudge-inference/fn-ret-trait-object-propagated-to-inputs-issue-149379-3.current.stderr
error[E0308]: mismatched types
  --> $DIR/fn-ret-trait-object-propagated-to-inputs-issue-149379-3.rs:35:38
   |
LL |     let _: &dyn Send = field_to_box3(&(1,));
   |                        ------------- ^^^^^ expected `&(dyn Send,)`, found `&({integer},)`
   |                        |
   |                        arguments to this function are incorrect
   |
   = note: expected reference `&(dyn Send,)`
              found reference `&({integer},)`
note: function defined here
  --> $DIR/fn-ret-trait-object-propagated-to-inputs-issue-149379-3.rs:28:4
   |
LL | fn field_to_box3<T>(x: &(T,)) -> &T {
   |    ^^^^^^^^^^^^^    --------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
